# collective-intelligence-framework

./: API.md  API_CIFProtocol_v1.md  API_FeedTypes_v1.md  API_HTTP_v1.md  API_ProtocolBuffers_v1.md  API_v0.md  API_v1.md  AddingFeeds.md  AddingFeeds_v0.md  AddingFeeds_v1.md  ApiPerlExample_v0.md  BindSetup.md  BindSetup_v1.md  BrowserPlugins.md  BrowserPluginsInstall_v0.md  CIFDemoOnEC2.md  CIFDemoOnEC2_v0.md  CIFInfrastructureDiagram.md  CIFInfrastructureDiagram_v1.md  ChangeLog_v1.md  ChromeClient.md  ChromeToolbar.md  CliClientExamples_v0.md  CliClientSetupDebianLenny_v0.md  CliClientSetupFreeBSD_v0.md  CliClientSetupUbuntu_v0.md  CliGlobalConfigurationFile_v0.md  CliPerlClientBSD_v0.md  ClientInstallSourcePerl_v0.md  ClientInstallSourcePython_v0.md  ClientInstall_Browser_v1.md  ClientInstall_CentOS6_v1.md  ClientInstall_DebianSqueeze_v1.md  ClientInstall_DebianWheezy_v1.md  ClientInstall_OSX7_v1.md  ClientInstall_OSX8_v1.md  ClientInstall_Ubuntu12_v1.md  ClientInstall_v1.md  ClientInstall_v1_RC3.md  ClientOptions_v1.md  (+165 more)
branches/wes-groups/server/: ChangeLog  INSTALL  Makefile.am  api.conf  configure.ac
branches/wes-groups/server/etc/: 00_alexa_whitelist.cfg  00_mirc_whitelist.cfg  misc.cfg  zeustracker.cfg
branches/wes-groups/server/lib/CIF/: Archive.pm  DBI.pm  WebAPI.pm
branches/wes-groups/server/lib/CIF/Archive/: DataType.pm
branches/wes-groups/server/lib/CIF/Archive/Analytic/Plugin/: DNSParse.pm  DomainWhitelistPrefix.pm  Nameserver.pm  ResolveUrl.pm  Spamhaus.pm  SpamhausDBL.pm  VirusTotal.pm
branches/wes-groups/server/lib/CIF/Archive/DataType/Plugin/: ASN.pm  Analytic.pm  Countrycode.pm  Domain.pm  Email.pm  Feed.pm  Hash.pm  Infrastructure.pm  Malware.pm  RIR.pm  Url.pm
branches/wes-groups/server/lib/CIF/Archive/Storage/Plugin/: Iodef.pm
branches/wes-groups/server/lib/CIF/FeedParser/: ParseDelim.pm
branches/wes-groups/server/lib/CIF/FeedParser/Plugin/Pull/: Http.pm
branches/wes-groups/server/lib/CIF/WebAPI/: APIKey.pm  APIKeyGroups.pm  AppAuth.pm
branches/wes-groups/server/lib/CIF/WebAPI/Plugin/domain/: botnet.pm
branches/wes-groups/server/lib/CIF/WebAPI/Plugin/email/: phishing.pm
branches/wes-groups/server/lib/CIF/WebAPI/Plugin/infrastructure/: network.pm
branches/wes-groups/server/schemas/Pg/: 00_archive.sql  asn.sql  domain.sql  email.sql  feed.sql  hash.sql  infrastructure.sql  malware.sql  rir.sql  url.sql  webapi.sql
server/trunk/: COPYING  ChangeLog  Makefile.am  example_api.conf
server/trunk/doc/schema/: cif.dia  cif.neato  cif.zigzag.dia
server/trunk/etc/: 00_alexa_whitelist.cfg  00_mirc_whitelist.cfg  00_whitelist.cfg  amada.cfg  autopostgresqlbackup  malwaredomains.cfg  pastebin.cfg  shadowserver.cfg  zeustracker.cfg
server/trunk/lib/CIF/: Archive.pm  DBI.pm  FeedParser.pm  WebAPI.pm
server/trunk/lib/CIF/Archive/: Analytic.pm  DataType.pm  Storage.pm
server/trunk/lib/CIF/Archive/Analytic/Plugin/: DomainWhitelistPrefix.pm  Nameserver.pm  RdataInfrastructure.pm  ResolveMalware.pm  ResolveUrl.pm  Resolver.pm  Sharewith.pm  Spamhaus.pm  SpamhausDBL.pm  VirusTotal.pm
server/trunk/lib/CIF/Archive/DataType/Plugin/: Asn.pm  Countrycode.pm  Domain.pm  Email.pm  Feed.pm  Hash.pm  Infrastructure.pm  Malware.pm  Rir.pm  Url.pm
server/trunk/lib/CIF/Archive/DataType/Plugin/Domain/: Nameserver.pm
server/trunk/lib/CIF/Archive/DataType/Plugin/Email/: Search.pm
server/trunk/lib/CIF/Archive/Storage/Plugin/: Iodef.pm
server/trunk/lib/CIF/FeedParser/: ParseCIF.pm  ParseRss.pm
server/trunk/lib/CIF/FeedParser/Plugin/Decode/: Zip.pm
server/trunk/lib/CIF/FeedParser/Plugin/Processor/: Uri.pm
server/trunk/lib/CIF/FeedParser/Plugin/Pull/: CIF.pm  Http.pm
server/trunk/lib/CIF/WebAPI/: AppAuth.pm  Plugin.pm
server/trunk/lib/CIF/WebAPI/Plugin/: asn.pm  countrycode.pm  hash.pm
server/trunk/lib/CIF/WebAPI/Plugin/domain/: fastflux.pm  whitelist.pm
server/trunk/lib/CIF/WebAPI/Plugin/email/: registrant.pm
server/trunk/lib/CIF/WebAPI/Plugin/infrastructure/: scan.pm  suspicious.pm
server/trunk/lib/CIF/WebAPI/Plugin/url/: malware.pm  phishing.pm
server/trunk/lib/CIF/WebAPI/Writer/: chart.pm  table.pm
server/trunk/sbin/: test-dependencies
server/trunk/schemas/Pg/: 00_archive.sql  asn.sql  domain.sql  email.sql  feed.sql  hash.sql  infrastructure.sql  malware.sql  rir.sql
server/trunk/schemas/Pg/index/: countrycode.sql  domain.sql  email.sql  hash.sql  infrastructure.sql  malware.sql  rir.sql
trunk/: README  (+2 more)
trunk/client/trunk/feedsources/: Makefile.am  configure.ac
trunk/client/trunk/feedsources/malware/: hosts-file.net.pl  malwaredomains.pl  spyeye_domains_blocklist.pl
trunk/client/trunk/feedsources/phishing/: phishtank.pl
trunk/client/trunk/feedsources/src/: mpatrol_hashes.pl  mpatrol_urls.pl  spyeye_configs.pl  zeustracker_domains_blocklist.pl
trunk/client/trunk/feedsources/whitelists/: alexa.pl  whitelist_dnswl_org.pl
trunk/feeds/: Makefile.am
trunk/feeds-public/: Makefile.am  configure.ac  rebuild.sh
trunk/feeds-public/etc/: 00_whitelist.cfg  amada.cfg  custom.cfg.example  misc.cfg  shadowserver.cfg  spyeyetracker.cfg  whitelist.cfg  zeustracker.cfg
trunk/feeds-public/rules/: amada.cfg  cron.cfg  misc.cfg  shadowserver.cfg  spyeyetracker.cfg  zeustracker.cfg
trunk/feeds-public/src/: Makefile.am  amada_ipblocklist.pl  cif_crontool  cif_feed_parser.pl  maliciousnetworks.org_firelist.pl  shadowserver_botnet_domains.pl  spyeye_binaries.pl  sshbl.pl
trunk/feeds/src/: amada_ipblocklist.pl  amada_proactive.pl  local_domain_whitelist.pl  malwaredomains.pl  zeustracker_ip_blocklist.pl
trunk/server/cif-server/: .tag  Makefile.am  configure.ac  example_api.conf
trunk/server/cif-server/etc/: 00_alexa_whitelist.cfg  00_whitelist.cfg  zeustracker.cfg
trunk/server/cif-server/lib/CIF/FeedParser/: ParseXml.pm
trunk/server/cif-server/lib/CIF/WebAPI/Plugin/: email.pm  infrastructure.pm  malware.pm
trunk/server/cif-server/schemas/Pg/: countrycode.sql  domain.sql
trunk/server/feeds/: configure.ac
trunk/server/feeds/src/: Makefile.am  google_phishing_replyto.pl  zeustracker_configs.pl  zeustracker_domains.pl
(+1837 files in other folders)
