bin_SCRIPTS = \
amada_proactive.pl \
amada_ipblocklist.pl \
malc0de.pl \
maliciousnetworks.org_firelist.pl \
malwaredomainlist.pl \
malwaredomains.pl \
zeustracker_binaries.pl \
zeustracker_configs.pl \
zeustracker_domains_blocklist.pl \
zeustracker_domains.pl \
zeustracker_ip_blocklist.pl \
spamhaus_drop.pl \
phishtank.pl \
google_phishing_replyto.pl \
whitelist_dnswl_org.pl \
local_domain_whitelist.pl \
local_infrastructure_whitelist.pl \
alexa_whitelist.pl \
hosts-file.net.pl \
mpatrol_hashes.pl \
mpatrol_urls.pl \
spyeye_binaries.pl \
spyeye_configs.pl \
spyeye_domains_blocklist.pl \
spyeye_domains.pl \
spyeye_ip_blocklist.pl \
sshbl.pl \
threatexpert.pl \
cron.sh
